--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 29
@@ -60,6 +63,10 @@ dependencies {
 
     //leak canary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+
+    // Firebase/Crashlytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
 
     //Retrofit2
     implementation 'com.google.code.gson:gson:2.8.6'
